[gd_scene load_steps=2 format=3 uid="uid://cwl7wyd0ypti6"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_1klyg"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1klyg")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 49.0
offset_right = 166.0
offset_bottom = 80.0
text = "make sth"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 21.0
offset_right = 127.0
offset_bottom = 44.0
text = "0"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 821.0
offset_top = 52.0
offset_right = 931.0
offset_bottom = 90.0
text = "multiplier 1"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="visibility_changed" from="Button2" to="." method="_on_button_2_visibility_changed"]
